--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.database-platform=com.lambdaschool.javatodos.config.SQLiteDialect
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 management.endpoints.web.exposure.include=*
 
-spring.flyway.url = jdbc:sqlite:todos.db
-spring.flyway.baseline-on-migrate=true
+#spring.flyway.url = jdbc:sqlite:todos.db
+#spring.flyway.baseline-on-migrate=true
