--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.error.whitelabel.enabled=false
 server.port=2019
-spring.jpa.database-platform=com.lambdaschool.javatodos.config.SQLiteDialect
+spring.jpa.database-platform=com.lambdaschool.todos.config.SQLiteDialect
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 management.endpoints.web.exposure.include=*
 
-#spring.flyway.url = jdbc:sqlite:todos.db
-#spring.flyway.baseline-on-migrate=true
+spring.flyway.url = jdbc:sqlite:todos.db
+spring.flyway.baseline-on-migrate=true
